# fbitset

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
.circleci/: config.yml
include/: fbitset.hpp
test/: CMakeLists.txt  basic.cpp  crash_no_ext.cpp  testloop.cpp  testloop.hpp  testloopbits.cpp  testloopvector.cpp  testopt.cpp
